--- a/Style.css
+++ b/Style.css
@@ -1,12 +1,39 @@
-- 👋 Hi, I’m @Art12-Code
-- 👀 I’m interested in ...
-- 🌱 I’m currently learning ...
-- 💞️ I’m looking to collaborate on ...
-- 📫 How to reach me ...
-- 😄 Pronouns: ...
-- ⚡ Fun fact: ...
+header{
+background-color: darkcyan;
+color: darkgrey;
+padding: 28px;
+font-size: 20px;
+font-family: Times New Roman;
+}
 
-<!---
-Art12-Code/Art12-Code is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+nav{
+  background-color: lightcyan;
+  color: darkgrey;
+  padding: 10px;
+}
+nav ul{
+  list-style-type:none;
+  margin: 0;
+padding:0;
+font-size:18;
+font-family: georgia;
+}
+nav li{
+  display :inline-block;
+  margin-right: 20px;
+}
+p{
+  
+font-size: 14px;
+font-family: serif;
+}
+h2{
+  font-size:20px;
+  font-family: georgia;
+}
+  footer{
+    background-color: darkcyan;
+    color:darkgrey;
+    text-align:center;
+  }
+
